--- a/css/single-page.css
+++ b/css/single-page.css
@@ -201,12 +201,11 @@ svg{
     margin-bottom: 0px !important;
 }
 .img-wrapper{
-    height: 100%;
-    width: 100%;
-    background-image: url(../images/3064.jpg);
-    background-repeat: no-repeat;
-    background-size: contain;
     margin-bottom: 20px;
+}
+.album-img{
+    height: 35%;
+    width: 100%
 }
 audio{
     width: 100%;
